--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "iscc_read_buffer_factory.go",
         "metrics_blob_access.go",
         "read_buffer_factory.go",
+        "read_canarying_blob_access.go",
         "redis_blob_access.go",
         "reference_expanding_blob_access.go",
         "size_distinguishing_blob_access.go",
@@ -31,6 +32,7 @@ go_library(
         "//pkg/clock",
         "//pkg/cloud/aws",
         "//pkg/digest",
+        "//pkg/eviction",
         "//pkg/proto/icas",
         "//pkg/proto/iscc",
         "//pkg/util",
@@ -55,6 +57,7 @@ go_test(
         "empty_blob_injecting_blob_access_test.go",
         "existence_caching_blob_access_test.go",
         "hierarchical_instance_names_blob_access_test.go",
+        "read_canarying_blob_access_test.go",
         "redis_blob_access_test.go",
         "reference_expanding_blob_access_test.go",
         "validation_caching_read_buffer_factory_test.go",
