--- a/pkg/blobstore/mirrored/BUILD.bazel
+++ b/pkg/blobstore/mirrored/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "@com_github_prometheus_client_golang//prometheus",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_x_sync//errgroup",
     ],
 )
 
