Add a new package for juggling with GetCapabilities() requests
In our case we want separate subsystems (storage, scheduler) to be able
to report their own capabilities and get them merged at a higher level.
This package adds the following:

- A Provider interface that various subsystems can implement to report
  their capabilities.
- A bunch of decorators for merging their responses and filtering their
  contents (authorization).
- A gRPC server type for the REv2 Capabilities service that calls into
  the Provider interface.

Now the goal is to adjust our subsystems to make use of the Provider
interface and patch up our tools to expose a REv2 Capabilities service
using the new server type.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -114,6 +114,15 @@ gomock(
 )
 
 gomock(
+    name = "capabilities",
+    out = "capabilities.go",
+    interfaces = ["Provider"],
+    library = "//pkg/capabilities",
+    mock_names = {"Provider": "MockCapabilitiesProvider"},
+    package = "mock",
+)
+
+gomock(
     name = "clock",
     out = "clock.go",
     interfaces = [
@@ -257,6 +266,7 @@ go_library(
         ":blockdevice.go",
         ":buffer.go",
         ":builder.go",
+        ":capabilities.go",
         ":clock.go",
         ":cloud_aws.go",
         ":digest.go",
