--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -28,6 +28,7 @@ go_library(
         "//pkg/blobstore/replication",
         "//pkg/blobstore/sharding",
         "//pkg/blockdevice",
+        "//pkg/capabilities",
         "//pkg/clock",
         "//pkg/cloud/aws",
         "//pkg/digest",
@@ -39,6 +40,7 @@ go_library(
         "//pkg/random",
         "//pkg/util",
         "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_go_redis_redis_extra_redisotel//:redisotel",
         "@com_github_go_redis_redis_v8//:redis",
         "@com_github_google_uuid//:uuid",
