--- a/pkg/blobstore/sharding/BUILD.bazel
+++ b/pkg/blobstore/sharding/BUILD.bazel
@@ -10,10 +10,12 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/sharding",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/atomic",
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/util",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_lazybeaver_xorshift//:xorshift",
         "@org_golang_x_sync//errgroup",
     ],
