--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -8,24 +8,21 @@ go_library(
         "configuration.go",
         "demultiplexing_build_queue.go",
         "forwarding_build_queue.go",
-        "non_executable_build_queue.go",
-        "update_enabled_toggling_build_queue.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/builder",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/auth",
+        "//pkg/capabilities",
         "//pkg/digest",
         "//pkg/grpc",
         "//pkg/proto/configuration/builder",
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
-        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
-        "@org_golang_google_protobuf//proto",
     ],
 )
 
@@ -35,7 +32,6 @@ go_test(
         "authorizing_build_queue_test.go",
         "demultiplexing_build_queue_test.go",
         "forwarding_build_queue_test.go",
-        "update_enabled_toggling_build_queue_test.go",
     ],
     deps = [
         ":builder",
@@ -43,6 +39,7 @@ go_test(
         "//pkg/digest",
         "//pkg/testutil",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
+        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
