--- a/pkg/filesystem/path/BUILD.bazel
+++ b/pkg/filesystem/path/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "builder.go",
         "component.go",
         "component_walker.go",
+        "components_list.go",
         "loop_detecting_scope_walker.go",
         "relative_scope_walker.go",
         "resolve.go",
