--- a/cmd/bb_replicator/BUILD.bazel
+++ b/cmd/bb_replicator/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//pkg/proto/replicator",
         "//pkg/util",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_sync//errgroup",
     ],
 )
 
