--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//pkg/proto/configuration/tls",
         "@com_github_google_go_jsonnet//:go-jsonnet",
         "@com_github_google_uuid//:uuid",
+        "@com_github_prometheus_client_golang//prometheus",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
