--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/global",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/atomic",
         "//pkg/clock",
         "//pkg/grpc",
         "//pkg/http",
@@ -35,6 +36,5 @@ go_library(
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
-        "@org_golang_x_sync//errgroup",
     ],
 )
