Ensure that all ActionResult messages have worker_completed_timestamp
We can use ActionResultExpiringBlobAccess to automatically discard
ActionResult messages after a certain amount of time has passed. This
ensures that our builds don't depend on actions that were built once,
but can no longer be reproduced. That would be bad, as it means the
build has a high risk of breaking if a Buildbarn cluster were to lose
its data unexpectedly.

This decorator obviously only works if ActionResult messages have the
relevant timestamp field set. It turns out that clients such as Bazel
don't do this, meaning that no-remote-exec do end up being cached
indefinitely. Let's solve this by automatically injecting this field
going forward.

I think it makes sense to inject this decorator automatically. There is
no reason you shouldn't use it.

--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "ac_read_buffer_factory.go",
         "action_result_expiring_blob_access.go",
+        "action_result_timestamp_injecting_blob_access.go",
         "authorizing_blob_access.go",
         "blob_access.go",
         "cas_read_buffer_factory.go",
@@ -46,6 +47,7 @@ go_library(
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//types/known/timestamppb",
         "@org_golang_x_sync//errgroup",
     ],
 )
@@ -54,6 +56,7 @@ go_test(
     name = "blobstore_test",
     srcs = [
         "action_result_expiring_blob_access_test.go",
+        "action_result_timestamp_injecting_blob_access_test.go",
         "authorizing_blob_access_test.go",
         "demultiplexing_blob_access_test.go",
         "empty_blob_injecting_blob_access_test.go",
