--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "metadata_forwarding_and_reusing_interceptor.go",
         "metadata_forwarding_interceptor.go",
         "metadata_header_values.go",
+        "proto_trace_attributes_extractor.go",
         "proxy_dialer.go",
         "request_metadata_tracing_interceptor.go",
         "server.go",
@@ -51,6 +52,7 @@ go_library(
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/prototext",
         "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//reflect/protoreflect",
     ],
 )
 
@@ -66,6 +68,7 @@ go_test(
         "metadata_adding_interceptor_test.go",
         "metadata_forwarding_and_reusing_interceptor_test.go",
         "metadata_forwarding_interceptor_test.go",
+        "proto_trace_attributes_extractor_test.go",
         "request_metadata_tracing_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
     ],
