--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -37,6 +37,7 @@ go_library(
         "//pkg/grpc",
         "//pkg/http",
         "//pkg/proto/configuration/blobstore",
+        "//pkg/proto/configuration/digest",
         "//pkg/random",
         "//pkg/util",
         "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
