--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -36,5 +36,6 @@ go_library(
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_x_sync//errgroup",
     ],
 )
