--- a/pkg/blobstore/replication/BUILD.bazel
+++ b/pkg/blobstore/replication/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "concurrency_limiting_blob_replicator.go",
         "deduplicating_blob_replicator.go",
         "local_blob_replicator.go",
+        "nested_blob_replicator.go",
         "noop_blob_replicator.go",
         "queued_blob_replicator.go",
         "remote_blob_replicator.go",
@@ -34,6 +35,7 @@ go_test(
     srcs = [
         "deduplicating_blob_replicator_test.go",
         "local_blob_replicator_test.go",
+        "nested_blob_replicator_test.go",
         "queued_blob_replicator_test.go",
     ],
     deps = [
@@ -42,6 +44,7 @@ go_test(
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/eviction",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
