Replace 'forwardMetadata' with a JMESPath expression
In some cases it may be of interest to set gRPC headers in a somewhat
programmatic fashion. Instead of just forwarding the literal value
provided to the client, it may be necessary to make slight alterations
to it. Or to set headers based on data yielded by the authentication
layer.

This change attempts to support such behaviour by removing the existing
'forwardMetadata' option, changing it to a single JMESPath expression
that has to yield a JSON object of type map[string][]string.

The change to grpc.proto includes information on how to convert uses of
the old 'forwardMetadata' option with 'addMetadataJmespathExpression'.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -12,11 +12,12 @@ go_library(
         "client_factory.go",
         "deduplicating_client_factory.go",
         "deny_authenticator.go",
+        "jmespath_extractor.go",
         "jwt_authenticator.go",
         "lazy_client_dialer.go",
         "metadata_adding_interceptor.go",
+        "metadata_extracting_and_forwarding_interceptor.go",
         "metadata_forwarding_and_reusing_interceptor.go",
-        "metadata_forwarding_interceptor.go",
         "metadata_header_values.go",
         "proto_trace_attributes_extractor.go",
         "proxy_dialer.go",
@@ -36,6 +37,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
+        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel_trace//:trace",
@@ -64,10 +66,11 @@ go_test(
         "authenticating_interceptor_test.go",
         "deduplicating_client_factory_test.go",
         "deny_authenticator_test.go",
+        "jmespath_extractor_test.go",
         "lazy_client_dialer_test.go",
         "metadata_adding_interceptor_test.go",
+        "metadata_extracting_and_forwarding_interceptor_test.go",
         "metadata_forwarding_and_reusing_interceptor_test.go",
-        "metadata_forwarding_interceptor_test.go",
         "proto_trace_attributes_extractor_test.go",
         "request_metadata_tracing_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
@@ -80,6 +83,7 @@ go_test(
         "//pkg/testutil",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
+        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel_trace//:trace",
