Use testutil.RequireEqual{Proto,Status}() consistently
This method is already used in a variety of places, but there are many
places left that use require.Equal(). The latest version of Protobuf has
made some internal changes that requires us to use these functions
consistently.

--- a/pkg/blockdevice/BUILD.bazel
+++ b/pkg/blockdevice/BUILD.bazel
@@ -48,6 +48,7 @@ go_test(
     srcs = ["new_block_device_from_file_test.go"],
     deps = [
         ":blockdevice",
+        "//pkg/testutil",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
