--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -33,6 +33,7 @@ go_test(
     deps = [
         ":util",
         "//pkg/proto/configuration/tls",
+        "//pkg/testutil",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
