--- a/pkg/digest/BUILD.bazel
+++ b/pkg/digest/BUILD.bazel
@@ -42,6 +42,7 @@ go_test(
         ":digest",
         "//internal/mock",
         "//pkg/eviction",
+        "//pkg/testutil",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
         "@com_github_google_uuid//:uuid",
