Add some quality of life improvements for pkg/filesystem/path
- Add NonEmptyStack, which an implementation of ComponentWalker can use
  to keep track of directories that have been entired.
- Add a simple implementation of OnTerminal() that holds on to
  filenames. It's pretty common for implementations of OnTerminal() to
  need to do that.

--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "buckets.go",
         "error_logger.go",
         "jsonnet.go",
+        "non_empty_stack.go",
         "status.go",
         "tls.go",
         "uuid.go",
