--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -33,6 +33,7 @@ go_library(
     deps = [
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
+        "//pkg/blobstore/slicing",
         "//pkg/blockdevice",
         "//pkg/capabilities",
         "//pkg/clock",
@@ -71,6 +72,7 @@ go_test(
         "//internal/mock",
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
+        "//pkg/blobstore/slicing",
         "//pkg/digest",
         "//pkg/filesystem",
         "//pkg/filesystem/path",
