--- a/pkg/blobstore/replication/BUILD.bazel
+++ b/pkg/blobstore/replication/BUILD.bazel
@@ -12,12 +12,14 @@ go_library(
         "queued_blob_replicator.go",
         "remote_blob_replicator.go",
         "replicator_server.go",
+        "with_blob_replicator.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/replication",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
+        "//pkg/blobstore/slicing",
         "//pkg/digest",
         "//pkg/proto/replicator",
         "//pkg/util",
