--- a/pkg/blobstore/mirrored/BUILD.bazel
+++ b/pkg/blobstore/mirrored/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/blobstore/replication",
+        "//pkg/blobstore/slicing",
         "//pkg/digest",
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
