Use '# keep' directives instead of '# gazelle:ignore'
Gazelle does a perfect job of managing this BUILD file, except for the
'deps' attribute of the go_library().

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -1,5 +1,3 @@
-# gazelle:ignore
-
 load("@io_bazel_rules_go//extras:gomock.bzl", "gomock")
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
@@ -263,32 +261,33 @@ gomock(
 go_library(
     name = "mock",
     srcs = [
-        ":aliases.go",
-        ":auth.go",
-        ":blobstore.go",
-        ":blobstore_local.go",
-        ":blobstore_replication.go",
-        ":blobstore_sharding.go",
-        ":blobstore_slicing.go",
-        ":blockdevice.go",
-        ":buffer.go",
-        ":builder.go",
-        ":capabilities.go",
-        ":clock.go",
-        ":cloud_aws.go",
-        ":digest.go",
-        ":filesystem.go",
-        ":filesystem_path.go",
-        ":grpc.go",
-        ":grpc_go.go",
-        ":jwt.go",
-        ":redis.go",
-        ":remoteexecution.go",
-        ":trace.go",
-        ":util.go",
+        "aliases.go",
+        "auth.go",
+        "blobstore.go",
+        "blobstore_local.go",
+        "blobstore_replication.go",
+        "blobstore_sharding.go",
+        "blobstore_slicing.go",
+        "blockdevice.go",
+        "buffer.go",
+        "builder.go",
+        "capabilities.go",
+        "clock.go",
+        "cloud_aws.go",
+        "digest.go",
+        "filesystem.go",
+        "filesystem_path.go",
+        "grpc.go",
+        "grpc_go.go",
+        "jwt.go",
+        "redis.go",
+        "remoteexecution.go",
+        "trace.go",
+        "util.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/internal/mock",
     visibility = ["//:__subpackages__"],
+    # keep
     deps = [
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
